--- a/app/src/main/assets/js/camaLESS/camaLESS.css
+++ b/app/src/main/assets/js/camaLESS/camaLESS.css
@@ -1,23 +1,55 @@
-
 .camaLessForm {
 	background: #fff;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	font-family: "Fira Sans" !important;
 }
 .camaLessForm section {
 	background-color: #fff;
+	overflow: auto;
+	height: calc(100% - 50px);
 }
 
 .camaLessForm label {
-    font-size: 70% !important;
+    font-size: 90%;
 	font-weight: normal !important;
     margin-right: 1rem !important;
 }
 .camaLessForm .camaLessFormListPanel .themeName {
     width: 60% !important;
 }
+.camaLessForm .camaLessFormFields .themeName input {
+	padding: 10px;
+	width: 100%;
+	box-sizing: border-box;
+	border: 1px solid;
+	font-size: 110%;
+}
 .camaLessForm .themeColors input {
     width: 100% !important;
     margin-bottom: 0.5em !important;
 	box-sizing: border-box;
+}
+.camaLessForm menu {
+	padding: 0;
+	height: 50px;
+	margin: 0;
+}
+.camaLessForm menu button {
+	width: calc(50% - 20px);
+	padding: 10px 0;
+	font-size: 125%;
+	margin: 0;
+	margin-right: 20px;
+	border: none !important;
+	height: 50px;
+}
+.camaLessForm menu button.recommend {
+	background-color: #48a !important;
+	color: #eee !important;
+	margin-right: 0;
+	margin-left: 20px;
 }
 
 .camaLessForm input[type="radio"] {
@@ -31,13 +63,12 @@
 .camaLessForm input[type="radio"] ~ label {
 	display: inline-block !important;
 	cursor: default;
-	font-size: 6rem !important;
+	font-size: 3.8rem;
 	text-align: center;
 	vertical-align: middle;
-	line-height: 2.6rem;
-	width: 2rem;
-	height: 2rem;
-	font-weight: bold;
+	width: 1.2rem;
+	height: 1.2rem;
+	font-weight: bold !important;
 	border-radius: 100px;
 	border-color: rgb(0, 0, 0);
 	border-width: 1px;
@@ -48,13 +79,14 @@
 }
 .camaLessForm input[type="radio"] ~ label:after {
 	content: " ";
+	vertical-align: top;
+	line-height: 1rem;
+	height: 1rem;
 	
 }
 .camaLessForm input[type="radio"]:checked ~ label:after {
 	content: '·';
 	display: inline-block;
-    width: 17px;
-    height: 17px;
 }
 
 .camaLessForm .themeAdd a {
@@ -74,13 +106,13 @@
 	vertical-align: middle;
 	display: inline;
 	text-transform: uppercase;
-	font-size: 80%;
 }
 .camaLessForm .themeAdd a img {
-	vertical-align: -8px;
+	vertical-align: middle;
 }
 .camaLessForm table {
     width: 100%;
+    margin-top: 20px;
 }
 
 .camaLessForm .iconLink {
@@ -123,23 +155,37 @@
 .camaLessForm .camaLessFormListPanel tr {
 	line-height: 40px;
 }
-
+.camaLessForm .camaLessFormListPanel {
+	display: block;
+}
+.camaLessForm .camaLessFormListPanel.editing {
+	display: none;
+	animation-name: goLeftList;
+	animation-duration: 0.25s;
+}
+.camaLessForm .camaLessFormListPanel.backing {
+	display: block;
+	animation-name: goRightList;
+	animation-duration: 0.25s;
+}
 .camaLessForm .camaLessFormEditPanel {
 	display: none;
 	left: 100%;
 	width: 100%;
-	height: 100%;
 	padding: 0 !important;
 }
 .camaLessForm .camaLessFormEditPanel ul {
 	padding: 0 !important;
+	list-style: none;
 }
 .camaLessForm .camaLessFormEditPanel.backing {
 	animation-duration: 0.25s;
 	animation-name: goRight;
 }
 .camaLessForm .camaLessFormEditPanel.editing {
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	opacity: 1;
 	left: 0%;
 	z-index: 100;
 	animation-duration: 0.25s;
@@ -150,27 +196,23 @@
 	width: 50px;
 	background-color: #2060cc;
 	line-height: 100%;
-	vertical-align: middle;
+	vertical-align: top;
 	text-align: center;
-	position: absolute;
 	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
 }
 .camaLessForm .camaLessFormEditPanel .camaLessFormBackToList img {
-	position: absolute;
 	width: 30px;
 	height: 40px;
-	top: calc(50% - 20px);
-	left: calc(50% - 15px);
+	margin: auto;
 }
 .camaLessForm .camaLessFormEditPanel .camaLessFormFields {
 	width: calc(100% - 50px);
 	max-height: 100%;
 	box-sizing: border-box;
-	margin-left: 50px;
-	padding: 10px;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
+	display: inline-flex;
+	padding: 20px;
 	overflow: auto;
 }
 .camaLessForm .camaLessFormEditPanel .camaLessFormFields tr {
@@ -178,7 +220,6 @@
 }
 .camaLessForm .camaLessFormEditPanel .camaLessFormFields tr.editing {
 	display: block;
-	padding: 30px;
 }
 .camaLessForm .camaLessFormEditPanel .camaLessFormFields td {
 	display: block;
@@ -195,17 +236,33 @@
 }
 @keyframes goLeft {
     from {
-        left: 100%;
+        margin-left: 100%;
     }
     to {
-        left: 0;
+        margin-left: 0;
     }
 }
 @keyframes goRight {
     from {
-        left: 0;
+        margin-left: 0;
     }
     to {
-        left: 100%;
+        margin-left: 100%;
+    }
+}
+@keyframes goLeftList {
+    from {
+        margin-left: 0;
+    }
+    to {
+        margin-left: -100%;
+    }
+}
+@keyframes goRightList {
+    from {
+        margin-left: -100%;
+    }
+    to {
+        margin-left: 0;
     }
 }
